// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`legacyConfig 1`] = `
[
  "402107790_STATIC_NOISE_GIF-opt-10.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1080.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1200.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-128.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-16.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1920.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-2048.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-256.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-32.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-384.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-3840.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-48.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-64.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-640.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-750.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-777.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-828.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-96.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-10.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1080.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1200.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-128.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-16.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1920.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-2048.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-256.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-32.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-384.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-3840.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-48.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-64.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-640.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-750.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-777.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-828.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
  "transparentImage-opt-10.WEBP",
  "transparentImage-opt-1080.WEBP",
  "transparentImage-opt-1200.WEBP",
  "transparentImage-opt-128.WEBP",
  "transparentImage-opt-16.WEBP",
  "transparentImage-opt-1920.WEBP",
  "transparentImage-opt-2048.WEBP",
  "transparentImage-opt-256.WEBP",
  "transparentImage-opt-32.WEBP",
  "transparentImage-opt-384.WEBP",
  "transparentImage-opt-3840.WEBP",
  "transparentImage-opt-48.WEBP",
  "transparentImage-opt-64.WEBP",
  "transparentImage-opt-640.WEBP",
  "transparentImage-opt-750.WEBP",
  "transparentImage-opt-777.WEBP",
  "transparentImage-opt-828.WEBP",
  "transparentImage-opt-96.WEBP",
]
`;

exports[`legacyConfig 2`] = `
[
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-10.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1080.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1200.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-128.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-16.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1920.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-2048.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-256.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-32.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-384.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-3840.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-48.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-64.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-640.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-750.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-777.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-828.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-96.WEBP",
  "animated.c00e0188-opt-10.WEBP",
  "animated.c00e0188-opt-128.WEBP",
  "animated.c00e0188-opt-16.WEBP",
  "animated.c00e0188-opt-32.WEBP",
  "animated.c00e0188-opt-48.WEBP",
  "animated.c00e0188-opt-64.WEBP",
  "animated.c00e0188-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`legacyConfig 3`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-777.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`legacyConfig 4`] = `
[
  "402107790_STATIC_NOISE_GIF-opt-10.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1080.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1200.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-128.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-16.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1920.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-2048.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-256.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-32.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-384.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-3840.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-48.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-64.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-640.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-750.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-777.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-828.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-96.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-10.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1080.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1200.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-128.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-16.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1920.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-2048.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-256.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-32.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-384.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-3840.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-48.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-64.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-640.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-750.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-777.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-828.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
  "transparentImage-opt-10.WEBP",
  "transparentImage-opt-1080.WEBP",
  "transparentImage-opt-1200.WEBP",
  "transparentImage-opt-128.WEBP",
  "transparentImage-opt-16.WEBP",
  "transparentImage-opt-1920.WEBP",
  "transparentImage-opt-2048.WEBP",
  "transparentImage-opt-256.WEBP",
  "transparentImage-opt-32.WEBP",
  "transparentImage-opt-384.WEBP",
  "transparentImage-opt-3840.WEBP",
  "transparentImage-opt-48.WEBP",
  "transparentImage-opt-64.WEBP",
  "transparentImage-opt-640.WEBP",
  "transparentImage-opt-750.WEBP",
  "transparentImage-opt-777.WEBP",
  "transparentImage-opt-828.WEBP",
  "transparentImage-opt-96.WEBP",
]
`;

exports[`legacyConfig 5`] = `
[
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-10.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1080.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1200.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-128.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-16.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1920.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-2048.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-256.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-32.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-384.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-3840.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-48.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-64.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-640.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-750.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-777.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-828.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-96.WEBP",
  "animated.c00e0188-opt-10.WEBP",
  "animated.c00e0188-opt-128.WEBP",
  "animated.c00e0188-opt-16.WEBP",
  "animated.c00e0188-opt-32.WEBP",
  "animated.c00e0188-opt-48.WEBP",
  "animated.c00e0188-opt-64.WEBP",
  "animated.c00e0188-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`legacyConfig 6`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-777.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`legacyConfig 7`] = `
[
  [
    "webp",
    10,
    10,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    128,
    128,
  ],
  [
    "webp",
    16,
    16,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    256,
    256,
  ],
  [
    "webp",
    32,
    32,
  ],
  [
    "webp",
    384,
    384,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    48,
    48,
  ],
  [
    "webp",
    64,
    64,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    96,
    96,
  ],
  [
    "webp",
    10,
    10,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    128,
    128,
  ],
  [
    "webp",
    16,
    16,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    256,
    256,
  ],
  [
    "webp",
    32,
    32,
  ],
  [
    "webp",
    384,
    384,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    48,
    48,
  ],
  [
    "webp",
    64,
    64,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    96,
    96,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    777,
    518,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    777,
    518,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
  [
    "webp",
    10,
    4,
  ],
  [
    "webp",
    1080,
    455,
  ],
  [
    "webp",
    1200,
    506,
  ],
  [
    "webp",
    128,
    54,
  ],
  [
    "webp",
    16,
    7,
  ],
  [
    "webp",
    1920,
    809,
  ],
  [
    "webp",
    2048,
    863,
  ],
  [
    "webp",
    256,
    108,
  ],
  [
    "webp",
    32,
    13,
  ],
  [
    "webp",
    384,
    162,
  ],
  [
    "webp",
    2190,
    923,
  ],
  [
    "webp",
    48,
    20,
  ],
  [
    "webp",
    64,
    27,
  ],
  [
    "webp",
    640,
    270,
  ],
  [
    "webp",
    750,
    316,
  ],
  [
    "webp",
    777,
    327,
  ],
  [
    "webp",
    828,
    349,
  ],
  [
    "webp",
    96,
    40,
  ],
]
`;

exports[`legacyConfig 8`] = `
[
  [
    "webp",
    10,
    15,
  ],
  [
    "webp",
    1080,
    1620,
  ],
  [
    "webp",
    1200,
    1800,
  ],
  [
    "webp",
    128,
    192,
  ],
  [
    "webp",
    16,
    24,
  ],
  [
    "webp",
    1920,
    2880,
  ],
  [
    "webp",
    2048,
    3072,
  ],
  [
    "webp",
    256,
    384,
  ],
  [
    "webp",
    32,
    48,
  ],
  [
    "webp",
    384,
    576,
  ],
  [
    "webp",
    3840,
    5760,
  ],
  [
    "webp",
    48,
    72,
  ],
  [
    "webp",
    64,
    96,
  ],
  [
    "webp",
    640,
    960,
  ],
  [
    "webp",
    750,
    1125,
  ],
  [
    "webp",
    777,
    1166,
  ],
  [
    "webp",
    828,
    1242,
  ],
  [
    "webp",
    96,
    144,
  ],
]
`;

exports[`legacyConfig 9`] = `
[
  [
    "webp",
    10,
    4,
  ],
  [
    "webp",
    1080,
    455,
  ],
  [
    "webp",
    1200,
    506,
  ],
  [
    "webp",
    128,
    54,
  ],
  [
    "webp",
    16,
    7,
  ],
  [
    "webp",
    1920,
    809,
  ],
  [
    "webp",
    2048,
    863,
  ],
  [
    "webp",
    256,
    108,
  ],
  [
    "webp",
    32,
    13,
  ],
  [
    "webp",
    384,
    162,
  ],
  [
    "webp",
    2048,
    863,
  ],
  [
    "webp",
    48,
    20,
  ],
  [
    "webp",
    64,
    27,
  ],
  [
    "webp",
    640,
    270,
  ],
  [
    "webp",
    750,
    316,
  ],
  [
    "webp",
    777,
    327,
  ],
  [
    "webp",
    828,
    349,
  ],
  [
    "webp",
    96,
    40,
  ],
  [
    "webp",
    10,
    10,
  ],
  [
    "webp",
    100,
    100,
  ],
  [
    "webp",
    16,
    16,
  ],
  [
    "webp",
    32,
    32,
  ],
  [
    "webp",
    48,
    48,
  ],
  [
    "webp",
    64,
    64,
  ],
  [
    "webp",
    96,
    96,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    777,
    518,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    777,
    518,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;

exports[`newConfig 1`] = `
[
  "402107790_STATIC_NOISE_GIF-opt-10.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1080.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1200.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-128.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-16.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1920.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-2048.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-256.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-32.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-384.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-3840.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-48.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-64.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-640.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-750.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-777.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-828.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-96.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-10.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1080.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1200.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-128.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-16.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1920.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-2048.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-256.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-32.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-384.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-3840.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-48.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-64.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-640.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-750.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-777.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-828.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
  "transparentImage-opt-10.WEBP",
  "transparentImage-opt-1080.WEBP",
  "transparentImage-opt-1200.WEBP",
  "transparentImage-opt-128.WEBP",
  "transparentImage-opt-16.WEBP",
  "transparentImage-opt-1920.WEBP",
  "transparentImage-opt-2048.WEBP",
  "transparentImage-opt-256.WEBP",
  "transparentImage-opt-32.WEBP",
  "transparentImage-opt-384.WEBP",
  "transparentImage-opt-3840.WEBP",
  "transparentImage-opt-48.WEBP",
  "transparentImage-opt-64.WEBP",
  "transparentImage-opt-640.WEBP",
  "transparentImage-opt-750.WEBP",
  "transparentImage-opt-777.WEBP",
  "transparentImage-opt-828.WEBP",
  "transparentImage-opt-96.WEBP",
]
`;

exports[`newConfig 2`] = `
[
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-10.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1080.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1200.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-128.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-16.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1920.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-2048.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-256.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-32.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-384.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-3840.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-48.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-64.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-640.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-750.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-777.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-828.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-96.WEBP",
  "animated.c00e0188-opt-10.WEBP",
  "animated.c00e0188-opt-128.WEBP",
  "animated.c00e0188-opt-16.WEBP",
  "animated.c00e0188-opt-32.WEBP",
  "animated.c00e0188-opt-48.WEBP",
  "animated.c00e0188-opt-64.WEBP",
  "animated.c00e0188-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`newConfig 3`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-777.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`newConfig 4`] = `
[
  "402107790_STATIC_NOISE_GIF-opt-10.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1080.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1200.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-128.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-16.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-1920.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-2048.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-256.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-32.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-384.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-3840.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-48.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-64.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-640.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-750.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-777.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-828.WEBP",
  "402107790_STATIC_NOISE_GIF-opt-96.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-10.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1080.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1200.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-128.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-16.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1920.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-2048.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-256.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-32.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-384.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-3840.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-48.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-64.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-640.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-750.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-777.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-828.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
  "transparentImage-opt-10.WEBP",
  "transparentImage-opt-1080.WEBP",
  "transparentImage-opt-1200.WEBP",
  "transparentImage-opt-128.WEBP",
  "transparentImage-opt-16.WEBP",
  "transparentImage-opt-1920.WEBP",
  "transparentImage-opt-2048.WEBP",
  "transparentImage-opt-256.WEBP",
  "transparentImage-opt-32.WEBP",
  "transparentImage-opt-384.WEBP",
  "transparentImage-opt-3840.WEBP",
  "transparentImage-opt-48.WEBP",
  "transparentImage-opt-64.WEBP",
  "transparentImage-opt-640.WEBP",
  "transparentImage-opt-750.WEBP",
  "transparentImage-opt-777.WEBP",
  "transparentImage-opt-828.WEBP",
  "transparentImage-opt-96.WEBP",
]
`;

exports[`newConfig 5`] = `
[
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-10.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1080.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1200.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-128.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-16.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1920.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-2048.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-256.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-32.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-384.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-3840.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-48.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-64.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-640.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-750.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-777.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-828.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-96.WEBP",
  "animated.c00e0188-opt-10.WEBP",
  "animated.c00e0188-opt-128.WEBP",
  "animated.c00e0188-opt-16.WEBP",
  "animated.c00e0188-opt-32.WEBP",
  "animated.c00e0188-opt-48.WEBP",
  "animated.c00e0188-opt-64.WEBP",
  "animated.c00e0188-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-777.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`newConfig 6`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-777.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`newConfig 7`] = `
[
  [
    "webp",
    10,
    10,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    128,
    128,
  ],
  [
    "webp",
    16,
    16,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    256,
    256,
  ],
  [
    "webp",
    32,
    32,
  ],
  [
    "webp",
    384,
    384,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    48,
    48,
  ],
  [
    "webp",
    64,
    64,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    96,
    96,
  ],
  [
    "webp",
    10,
    10,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    128,
    128,
  ],
  [
    "webp",
    16,
    16,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    256,
    256,
  ],
  [
    "webp",
    32,
    32,
  ],
  [
    "webp",
    384,
    384,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    48,
    48,
  ],
  [
    "webp",
    64,
    64,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    96,
    96,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    777,
    518,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    777,
    518,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
  [
    "webp",
    10,
    4,
  ],
  [
    "webp",
    1080,
    455,
  ],
  [
    "webp",
    1200,
    506,
  ],
  [
    "webp",
    128,
    54,
  ],
  [
    "webp",
    16,
    7,
  ],
  [
    "webp",
    1920,
    809,
  ],
  [
    "webp",
    2048,
    863,
  ],
  [
    "webp",
    256,
    108,
  ],
  [
    "webp",
    32,
    13,
  ],
  [
    "webp",
    384,
    162,
  ],
  [
    "webp",
    2190,
    923,
  ],
  [
    "webp",
    48,
    20,
  ],
  [
    "webp",
    64,
    27,
  ],
  [
    "webp",
    640,
    270,
  ],
  [
    "webp",
    750,
    316,
  ],
  [
    "webp",
    777,
    327,
  ],
  [
    "webp",
    828,
    349,
  ],
  [
    "webp",
    96,
    40,
  ],
]
`;

exports[`newConfig 8`] = `
[
  [
    "webp",
    10,
    15,
  ],
  [
    "webp",
    1080,
    1620,
  ],
  [
    "webp",
    1200,
    1800,
  ],
  [
    "webp",
    128,
    192,
  ],
  [
    "webp",
    16,
    24,
  ],
  [
    "webp",
    1920,
    2880,
  ],
  [
    "webp",
    2048,
    3072,
  ],
  [
    "webp",
    256,
    384,
  ],
  [
    "webp",
    32,
    48,
  ],
  [
    "webp",
    384,
    576,
  ],
  [
    "webp",
    3840,
    5760,
  ],
  [
    "webp",
    48,
    72,
  ],
  [
    "webp",
    64,
    96,
  ],
  [
    "webp",
    640,
    960,
  ],
  [
    "webp",
    750,
    1125,
  ],
  [
    "webp",
    777,
    1166,
  ],
  [
    "webp",
    828,
    1242,
  ],
  [
    "webp",
    96,
    144,
  ],
]
`;

exports[`newConfig 9`] = `
[
  [
    "webp",
    10,
    4,
  ],
  [
    "webp",
    1080,
    455,
  ],
  [
    "webp",
    1200,
    506,
  ],
  [
    "webp",
    128,
    54,
  ],
  [
    "webp",
    16,
    7,
  ],
  [
    "webp",
    1920,
    809,
  ],
  [
    "webp",
    2048,
    863,
  ],
  [
    "webp",
    256,
    108,
  ],
  [
    "webp",
    32,
    13,
  ],
  [
    "webp",
    384,
    162,
  ],
  [
    "webp",
    2048,
    863,
  ],
  [
    "webp",
    48,
    20,
  ],
  [
    "webp",
    64,
    27,
  ],
  [
    "webp",
    640,
    270,
  ],
  [
    "webp",
    750,
    316,
  ],
  [
    "webp",
    777,
    327,
  ],
  [
    "webp",
    828,
    349,
  ],
  [
    "webp",
    96,
    40,
  ],
  [
    "webp",
    10,
    10,
  ],
  [
    "webp",
    100,
    100,
  ],
  [
    "webp",
    16,
    16,
  ],
  [
    "webp",
    32,
    32,
  ],
  [
    "webp",
    48,
    48,
  ],
  [
    "webp",
    64,
    64,
  ],
  [
    "webp",
    96,
    96,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    777,
    518,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    777,
    518,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;

exports[`newConfigExportFolderName 1`] = `
[
  "402107790_STATIC_NOISE_GIF-opt-10.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1080.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1200.GIF",
  "402107790_STATIC_NOISE_GIF-opt-128.GIF",
  "402107790_STATIC_NOISE_GIF-opt-16.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1920.GIF",
  "402107790_STATIC_NOISE_GIF-opt-2048.GIF",
  "402107790_STATIC_NOISE_GIF-opt-256.GIF",
  "402107790_STATIC_NOISE_GIF-opt-32.GIF",
  "402107790_STATIC_NOISE_GIF-opt-384.GIF",
  "402107790_STATIC_NOISE_GIF-opt-3840.GIF",
  "402107790_STATIC_NOISE_GIF-opt-48.GIF",
  "402107790_STATIC_NOISE_GIF-opt-64.GIF",
  "402107790_STATIC_NOISE_GIF-opt-640.GIF",
  "402107790_STATIC_NOISE_GIF-opt-750.GIF",
  "402107790_STATIC_NOISE_GIF-opt-777.GIF",
  "402107790_STATIC_NOISE_GIF-opt-828.GIF",
  "402107790_STATIC_NOISE_GIF-opt-96.GIF",
  "402107790_STATIC_NOISE_WEBP-opt-10.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1080.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1200.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-128.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-16.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1920.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-2048.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-256.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-32.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-384.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-3840.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-48.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-64.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-640.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-750.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-777.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-828.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.JPG",
  "transparentImage-opt-10.PNG",
  "transparentImage-opt-1080.PNG",
  "transparentImage-opt-1200.PNG",
  "transparentImage-opt-128.PNG",
  "transparentImage-opt-16.PNG",
  "transparentImage-opt-1920.PNG",
  "transparentImage-opt-2048.PNG",
  "transparentImage-opt-256.PNG",
  "transparentImage-opt-32.PNG",
  "transparentImage-opt-384.PNG",
  "transparentImage-opt-3840.PNG",
  "transparentImage-opt-48.PNG",
  "transparentImage-opt-64.PNG",
  "transparentImage-opt-640.PNG",
  "transparentImage-opt-750.PNG",
  "transparentImage-opt-777.PNG",
  "transparentImage-opt-828.PNG",
  "transparentImage-opt-96.PNG",
]
`;

exports[`newConfigExportFolderName 2`] = `
[
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-10.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1080.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1200.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-128.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-16.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1920.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-2048.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-256.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-32.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-384.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-3840.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-48.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-64.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-640.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-750.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-777.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-828.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-96.WEBP",
  "animated.c00e0188-opt-10.PNG",
  "animated.c00e0188-opt-128.PNG",
  "animated.c00e0188-opt-16.PNG",
  "animated.c00e0188-opt-32.PNG",
  "animated.c00e0188-opt-48.PNG",
  "animated.c00e0188-opt-64.PNG",
  "animated.c00e0188-opt-96.PNG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.JPG",
]
`;

exports[`newConfigExportFolderName 3`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-777.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.JPG",
]
`;

exports[`newConfigExportFolderName 4`] = `
[
  "402107790_STATIC_NOISE_GIF-opt-10.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1080.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1200.GIF",
  "402107790_STATIC_NOISE_GIF-opt-128.GIF",
  "402107790_STATIC_NOISE_GIF-opt-16.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1920.GIF",
  "402107790_STATIC_NOISE_GIF-opt-2048.GIF",
  "402107790_STATIC_NOISE_GIF-opt-256.GIF",
  "402107790_STATIC_NOISE_GIF-opt-32.GIF",
  "402107790_STATIC_NOISE_GIF-opt-384.GIF",
  "402107790_STATIC_NOISE_GIF-opt-3840.GIF",
  "402107790_STATIC_NOISE_GIF-opt-48.GIF",
  "402107790_STATIC_NOISE_GIF-opt-64.GIF",
  "402107790_STATIC_NOISE_GIF-opt-640.GIF",
  "402107790_STATIC_NOISE_GIF-opt-750.GIF",
  "402107790_STATIC_NOISE_GIF-opt-777.GIF",
  "402107790_STATIC_NOISE_GIF-opt-828.GIF",
  "402107790_STATIC_NOISE_GIF-opt-96.GIF",
  "402107790_STATIC_NOISE_WEBP-opt-10.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1080.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1200.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-128.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-16.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1920.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-2048.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-256.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-32.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-384.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-3840.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-48.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-64.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-640.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-750.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-777.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-828.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.JPG",
  "transparentImage-opt-10.PNG",
  "transparentImage-opt-1080.PNG",
  "transparentImage-opt-1200.PNG",
  "transparentImage-opt-128.PNG",
  "transparentImage-opt-16.PNG",
  "transparentImage-opt-1920.PNG",
  "transparentImage-opt-2048.PNG",
  "transparentImage-opt-256.PNG",
  "transparentImage-opt-32.PNG",
  "transparentImage-opt-384.PNG",
  "transparentImage-opt-3840.PNG",
  "transparentImage-opt-48.PNG",
  "transparentImage-opt-64.PNG",
  "transparentImage-opt-640.PNG",
  "transparentImage-opt-750.PNG",
  "transparentImage-opt-777.PNG",
  "transparentImage-opt-828.PNG",
  "transparentImage-opt-96.PNG",
]
`;

exports[`newConfigExportFolderName 5`] = `
[
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-10.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1080.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1200.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-128.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-16.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1920.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-2048.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-256.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-32.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-384.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-3840.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-48.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-64.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-640.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-750.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-777.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-828.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-96.WEBP",
  "animated.c00e0188-opt-10.PNG",
  "animated.c00e0188-opt-128.PNG",
  "animated.c00e0188-opt-16.PNG",
  "animated.c00e0188-opt-32.PNG",
  "animated.c00e0188-opt-48.PNG",
  "animated.c00e0188-opt-64.PNG",
  "animated.c00e0188-opt-96.PNG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.JPG",
]
`;

exports[`newConfigExportFolderName 6`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-777.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.JPG",
]
`;

exports[`newConfigJpeg 1`] = `
[
  "402107790_STATIC_NOISE_GIF-opt-10.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1080.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1200.GIF",
  "402107790_STATIC_NOISE_GIF-opt-128.GIF",
  "402107790_STATIC_NOISE_GIF-opt-16.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1920.GIF",
  "402107790_STATIC_NOISE_GIF-opt-2048.GIF",
  "402107790_STATIC_NOISE_GIF-opt-256.GIF",
  "402107790_STATIC_NOISE_GIF-opt-32.GIF",
  "402107790_STATIC_NOISE_GIF-opt-384.GIF",
  "402107790_STATIC_NOISE_GIF-opt-3840.GIF",
  "402107790_STATIC_NOISE_GIF-opt-48.GIF",
  "402107790_STATIC_NOISE_GIF-opt-64.GIF",
  "402107790_STATIC_NOISE_GIF-opt-640.GIF",
  "402107790_STATIC_NOISE_GIF-opt-750.GIF",
  "402107790_STATIC_NOISE_GIF-opt-777.GIF",
  "402107790_STATIC_NOISE_GIF-opt-828.GIF",
  "402107790_STATIC_NOISE_GIF-opt-96.GIF",
  "402107790_STATIC_NOISE_WEBP-opt-10.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1080.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1200.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-128.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-16.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1920.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-2048.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-256.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-32.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-384.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-3840.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-48.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-64.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-640.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-750.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-777.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-828.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.JPG",
  "transparentImage-opt-10.PNG",
  "transparentImage-opt-1080.PNG",
  "transparentImage-opt-1200.PNG",
  "transparentImage-opt-128.PNG",
  "transparentImage-opt-16.PNG",
  "transparentImage-opt-1920.PNG",
  "transparentImage-opt-2048.PNG",
  "transparentImage-opt-256.PNG",
  "transparentImage-opt-32.PNG",
  "transparentImage-opt-384.PNG",
  "transparentImage-opt-3840.PNG",
  "transparentImage-opt-48.PNG",
  "transparentImage-opt-64.PNG",
  "transparentImage-opt-640.PNG",
  "transparentImage-opt-750.PNG",
  "transparentImage-opt-777.PNG",
  "transparentImage-opt-828.PNG",
  "transparentImage-opt-96.PNG",
]
`;

exports[`newConfigJpeg 2`] = `
[
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-10.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1080.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1200.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-128.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-16.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1920.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-2048.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-256.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-32.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-384.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-3840.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-48.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-64.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-640.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-750.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-777.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-828.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-96.WEBP",
  "animated.c00e0188-opt-10.PNG",
  "animated.c00e0188-opt-128.PNG",
  "animated.c00e0188-opt-16.PNG",
  "animated.c00e0188-opt-32.PNG",
  "animated.c00e0188-opt-48.PNG",
  "animated.c00e0188-opt-64.PNG",
  "animated.c00e0188-opt-96.PNG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.JPG",
]
`;

exports[`newConfigJpeg 3`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-777.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.JPG",
]
`;

exports[`newConfigJpeg 4`] = `
[
  "402107790_STATIC_NOISE_GIF-opt-10.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1080.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1200.GIF",
  "402107790_STATIC_NOISE_GIF-opt-128.GIF",
  "402107790_STATIC_NOISE_GIF-opt-16.GIF",
  "402107790_STATIC_NOISE_GIF-opt-1920.GIF",
  "402107790_STATIC_NOISE_GIF-opt-2048.GIF",
  "402107790_STATIC_NOISE_GIF-opt-256.GIF",
  "402107790_STATIC_NOISE_GIF-opt-32.GIF",
  "402107790_STATIC_NOISE_GIF-opt-384.GIF",
  "402107790_STATIC_NOISE_GIF-opt-3840.GIF",
  "402107790_STATIC_NOISE_GIF-opt-48.GIF",
  "402107790_STATIC_NOISE_GIF-opt-64.GIF",
  "402107790_STATIC_NOISE_GIF-opt-640.GIF",
  "402107790_STATIC_NOISE_GIF-opt-750.GIF",
  "402107790_STATIC_NOISE_GIF-opt-777.GIF",
  "402107790_STATIC_NOISE_GIF-opt-828.GIF",
  "402107790_STATIC_NOISE_GIF-opt-96.GIF",
  "402107790_STATIC_NOISE_WEBP-opt-10.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1080.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1200.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-128.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-16.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-1920.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-2048.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-256.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-32.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-384.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-3840.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-48.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-64.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-640.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-750.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-777.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-828.WEBP",
  "402107790_STATIC_NOISE_WEBP-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.JPG",
  "transparentImage-opt-10.PNG",
  "transparentImage-opt-1080.PNG",
  "transparentImage-opt-1200.PNG",
  "transparentImage-opt-128.PNG",
  "transparentImage-opt-16.PNG",
  "transparentImage-opt-1920.PNG",
  "transparentImage-opt-2048.PNG",
  "transparentImage-opt-256.PNG",
  "transparentImage-opt-32.PNG",
  "transparentImage-opt-384.PNG",
  "transparentImage-opt-3840.PNG",
  "transparentImage-opt-48.PNG",
  "transparentImage-opt-64.PNG",
  "transparentImage-opt-640.PNG",
  "transparentImage-opt-750.PNG",
  "transparentImage-opt-777.PNG",
  "transparentImage-opt-828.PNG",
  "transparentImage-opt-96.PNG",
]
`;

exports[`newConfigJpeg 5`] = `
[
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-10.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1080.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1200.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-128.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-16.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-1920.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-2048.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-256.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-32.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-384.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-3840.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-48.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-64.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-640.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-750.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-777.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-828.WEBP",
  "0998337b913c48d47498b513e5f51b5119940311ad25e51275a0d31cc5244a97-opt-96.WEBP",
  "animated.c00e0188-opt-10.PNG",
  "animated.c00e0188-opt-128.PNG",
  "animated.c00e0188-opt-16.PNG",
  "animated.c00e0188-opt-32.PNG",
  "animated.c00e0188-opt-48.PNG",
  "animated.c00e0188-opt-64.PNG",
  "animated.c00e0188-opt-96.PNG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small.0fa13b23-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-777.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.JPG",
]
`;

exports[`newConfigJpeg 6`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-777.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.JPG",
]
`;

exports[`newConfigJpeg 7`] = `
[
  [
    "gif",
    10,
    10,
  ],
  [
    "gif",
    400,
    400,
  ],
  [
    "gif",
    400,
    400,
  ],
  [
    "gif",
    128,
    128,
  ],
  [
    "gif",
    16,
    16,
  ],
  [
    "gif",
    400,
    400,
  ],
  [
    "gif",
    400,
    400,
  ],
  [
    "gif",
    256,
    256,
  ],
  [
    "gif",
    32,
    32,
  ],
  [
    "gif",
    384,
    384,
  ],
  [
    "gif",
    400,
    400,
  ],
  [
    "gif",
    48,
    48,
  ],
  [
    "gif",
    64,
    64,
  ],
  [
    "gif",
    400,
    400,
  ],
  [
    "gif",
    400,
    400,
  ],
  [
    "gif",
    400,
    400,
  ],
  [
    "gif",
    400,
    400,
  ],
  [
    "gif",
    96,
    96,
  ],
  [
    "webp",
    10,
    10,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    128,
    128,
  ],
  [
    "webp",
    16,
    16,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    256,
    256,
  ],
  [
    "webp",
    32,
    32,
  ],
  [
    "webp",
    384,
    384,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    48,
    48,
  ],
  [
    "webp",
    64,
    64,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    400,
    400,
  ],
  [
    "webp",
    96,
    96,
  ],
  [
    "jpeg",
    10,
    7,
  ],
  [
    "jpeg",
    1080,
    720,
  ],
  [
    "jpeg",
    1200,
    800,
  ],
  [
    "jpeg",
    128,
    85,
  ],
  [
    "jpeg",
    16,
    11,
  ],
  [
    "jpeg",
    1920,
    1280,
  ],
  [
    "jpeg",
    2048,
    1365,
  ],
  [
    "jpeg",
    256,
    171,
  ],
  [
    "jpeg",
    32,
    21,
  ],
  [
    "jpeg",
    384,
    256,
  ],
  [
    "jpeg",
    3840,
    2560,
  ],
  [
    "jpeg",
    48,
    32,
  ],
  [
    "jpeg",
    64,
    43,
  ],
  [
    "jpeg",
    640,
    427,
  ],
  [
    "jpeg",
    750,
    500,
  ],
  [
    "jpeg",
    777,
    518,
  ],
  [
    "jpeg",
    828,
    552,
  ],
  [
    "jpeg",
    96,
    64,
  ],
  [
    "jpeg",
    10,
    7,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    128,
    85,
  ],
  [
    "jpeg",
    16,
    11,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    256,
    171,
  ],
  [
    "jpeg",
    32,
    21,
  ],
  [
    "jpeg",
    384,
    256,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    48,
    32,
  ],
  [
    "jpeg",
    64,
    43,
  ],
  [
    "jpeg",
    640,
    427,
  ],
  [
    "jpeg",
    750,
    500,
  ],
  [
    "jpeg",
    777,
    518,
  ],
  [
    "jpeg",
    828,
    552,
  ],
  [
    "jpeg",
    96,
    64,
  ],
  [
    "png",
    10,
    4,
  ],
  [
    "png",
    1080,
    455,
  ],
  [
    "png",
    1200,
    506,
  ],
  [
    "png",
    128,
    54,
  ],
  [
    "png",
    16,
    7,
  ],
  [
    "png",
    1920,
    809,
  ],
  [
    "png",
    2048,
    863,
  ],
  [
    "png",
    256,
    108,
  ],
  [
    "png",
    32,
    13,
  ],
  [
    "png",
    384,
    162,
  ],
  [
    "png",
    2190,
    923,
  ],
  [
    "png",
    48,
    20,
  ],
  [
    "png",
    64,
    27,
  ],
  [
    "png",
    640,
    270,
  ],
  [
    "png",
    750,
    316,
  ],
  [
    "png",
    777,
    327,
  ],
  [
    "png",
    828,
    349,
  ],
  [
    "png",
    96,
    40,
  ],
]
`;

exports[`newConfigJpeg 8`] = `
[
  [
    "jpeg",
    10,
    15,
  ],
  [
    "jpeg",
    1080,
    1620,
  ],
  [
    "jpeg",
    1200,
    1800,
  ],
  [
    "jpeg",
    128,
    192,
  ],
  [
    "jpeg",
    16,
    24,
  ],
  [
    "jpeg",
    1920,
    2880,
  ],
  [
    "jpeg",
    2048,
    3072,
  ],
  [
    "jpeg",
    256,
    384,
  ],
  [
    "jpeg",
    32,
    48,
  ],
  [
    "jpeg",
    384,
    576,
  ],
  [
    "jpeg",
    3840,
    5760,
  ],
  [
    "jpeg",
    48,
    72,
  ],
  [
    "jpeg",
    64,
    96,
  ],
  [
    "jpeg",
    640,
    960,
  ],
  [
    "jpeg",
    750,
    1125,
  ],
  [
    "jpeg",
    777,
    1166,
  ],
  [
    "jpeg",
    828,
    1242,
  ],
  [
    "jpeg",
    96,
    144,
  ],
]
`;

exports[`newConfigJpeg 9`] = `
[
  [
    "webp",
    10,
    4,
  ],
  [
    "webp",
    1080,
    455,
  ],
  [
    "webp",
    1200,
    506,
  ],
  [
    "webp",
    128,
    54,
  ],
  [
    "webp",
    16,
    7,
  ],
  [
    "webp",
    1920,
    809,
  ],
  [
    "webp",
    2048,
    863,
  ],
  [
    "webp",
    256,
    108,
  ],
  [
    "webp",
    32,
    13,
  ],
  [
    "webp",
    384,
    162,
  ],
  [
    "webp",
    2048,
    863,
  ],
  [
    "webp",
    48,
    20,
  ],
  [
    "webp",
    64,
    27,
  ],
  [
    "webp",
    640,
    270,
  ],
  [
    "webp",
    750,
    316,
  ],
  [
    "webp",
    777,
    327,
  ],
  [
    "webp",
    828,
    349,
  ],
  [
    "webp",
    96,
    40,
  ],
  [
    "png",
    10,
    10,
  ],
  [
    "png",
    100,
    100,
  ],
  [
    "png",
    16,
    16,
  ],
  [
    "png",
    32,
    32,
  ],
  [
    "png",
    48,
    48,
  ],
  [
    "png",
    64,
    64,
  ],
  [
    "png",
    96,
    96,
  ],
  [
    "jpeg",
    10,
    7,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    128,
    85,
  ],
  [
    "jpeg",
    16,
    11,
  ],
  [
    "jpeg",
    256,
    171,
  ],
  [
    "jpeg",
    32,
    21,
  ],
  [
    "jpeg",
    384,
    256,
  ],
  [
    "jpeg",
    48,
    32,
  ],
  [
    "jpeg",
    64,
    43,
  ],
  [
    "jpeg",
    640,
    427,
  ],
  [
    "jpeg",
    750,
    500,
  ],
  [
    "jpeg",
    777,
    518,
  ],
  [
    "jpeg",
    828,
    552,
  ],
  [
    "jpeg",
    96,
    64,
  ],
  [
    "jpeg",
    10,
    7,
  ],
  [
    "jpeg",
    1080,
    720,
  ],
  [
    "jpeg",
    1200,
    800,
  ],
  [
    "jpeg",
    128,
    85,
  ],
  [
    "jpeg",
    16,
    11,
  ],
  [
    "jpeg",
    1920,
    1280,
  ],
  [
    "jpeg",
    2048,
    1365,
  ],
  [
    "jpeg",
    256,
    171,
  ],
  [
    "jpeg",
    32,
    21,
  ],
  [
    "jpeg",
    384,
    256,
  ],
  [
    "jpeg",
    3840,
    2560,
  ],
  [
    "jpeg",
    48,
    32,
  ],
  [
    "jpeg",
    64,
    43,
  ],
  [
    "jpeg",
    640,
    427,
  ],
  [
    "jpeg",
    750,
    500,
  ],
  [
    "jpeg",
    777,
    518,
  ],
  [
    "jpeg",
    828,
    552,
  ],
  [
    "jpeg",
    96,
    64,
  ],
]
`;
